# sdks

./: LICENSE  README.md
python/: .gitignore  README.md  build.sh  pyproject.toml
python/examples/: challenge.py
python/rust/: Cargo.toml
python/rust/src/: lib.rs
python/src/duckity/: __init__.py
rust/: Cargo.toml  README.md
rust/examples/: challenge.rs
rust/src/: lib.rs
wasm/: Cargo.toml  README.md  build.sh  publish.sh
wasm/examples/: challenge.html
wasm/js/: package.json  tsconfig.json
wasm/js/src/: duckity.ts  worker.ts
wasm/js/src/wasm/: duckity_bg.wasm.d.ts
wasm/pkg/: duckity.js  duckity_bg.wasm  package.json
wasm/src/: lib.rs
