[package]
name = "duckity"
version = "1.0.2"
edition = "2024"
authors = ["Nyeki"]
license = "MIT"
description = "Duckity SDK for Rust."
repository = "https://github.com/duckity-dev/sdks/tree/main/rust"
readme = "./README.md"

[dependencies]
base64 = "0.22.1"
num-bigint = "0.4.6"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
opt-level = 3
