[package]
name = "duckity-wasm"
version = "1.0.0"
description = "A WASM web SDK for Duckity."
license = "MIT"
authors = ["Nyeki"]
repository = "https://github.com/duckity-dev/sdks/tree/main/wasm"
edition = "2024"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
gloo-net = "0.6.0"
num-bigint = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"

[lib]
crate-type = ["cdylib"]
